# matching-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: baseline.md  methodology.md  optimization.md
include/: LatencyStats.h  NetIO.h  Order.h  OrderBook.h  Server.h  SessionStats.h  ThreadSafeQueue.h
src/: OrderBook.cpp  Server.cpp  client.cpp  main.cpp  main.cpp.bak  server_main.cpp
tests/: test_orderbook.cpp  test_server.cpp
